apps/f1-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-backend-service
  namespace: f1
spec:
  selector:
    app: f1-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
